--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ projects:
   - title: The Shadow Line
     directory: 'the-shadow-line'
     client: BBC
-  - title: Wihtechapel
+  - title: Whitechapel
     directory: 'whitechapel'
     client: ITV
   - title: Is the i3 right for you?
