--- a/wraith/configs/config.yaml
+++ b/wraith/configs/config.yaml
@@ -8,7 +8,7 @@ directory:
 # Add only 2 domains, key will act as a label
 domains:
   dev: "http://0.0.0.0:4000"
-  live: "http://paulcarvill.github.io/suki-rai.com"
+  live: "http://suki-rai.com"
 
 #Type screen widths below, here are a couple of examples
 screen_widths:
